# HackerNewsPodcast

./: .env  app.py  database.py  generate_podcast.py  hackernews.db  hello.py  hn_fetcher.py  pyproject.toml
data/transcripts/: transcript_0cff835d44ba49819b3df20216385a93.txt  transcript_8e4ccadfba884cbf8b00a874334f3bd1.txt  transcript_a27f9881de6e4a9badff6543e009b4ab.txt
exports/: hackernews_articles.xlsx
